--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: make
+    - name: build
       run: make
-    - name: make test
-      run: make test
+    - name: make debug
+      run: | 
+        make debug
+        thoth-debug debug
+    - name: test
+      run: |
+        make test
+        thoth test
+    - name: clean
+      run: make clean
